Hack-y solution to solve blank initial bg, bg stretch

--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
+html, body {
+    height: 100%;
+}
 body{
+background-size: cover;
 font-family: Trebuchet, Lucida Sans, Arial, Sans-Serif;
 min-height: 500px;
 min-width: 1000px;
